--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <logback.version>1.2.3</logback.version>
         <spring.context.version>5.2.5.RELEASE</spring.context.version>
         <java.version>11</java.version>
+        <javax.annotation.version>1.3.2</javax.annotation.version>
     </properties>
 
     <dependencyManagement>
@@ -30,6 +31,12 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring.context.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax.annotation.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
