--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring.context.version>5.2.5.RELEASE</spring.context.version>
         <java.version>11</java.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
+        <lombok.version>1.18.12</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -37,7 +38,11 @@
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${javax.annotation.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
